--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,7 +1,7 @@
 
 #header > div {
 
-  background: #fe6258 url(../img/wood@2x.png) center center no-repeat;
+  background: #1431c1 url(../img/wood@2x.png) center center no-repeat;
   z-index: 2;
   text-align: center;
   -webkit-box-shadow: inset 0 -8px 10px -10px #ef1001;
@@ -14,7 +14,7 @@
   -moz-background-size: cover;
   background-size: cover;
 
-  min-height: 180px;
+  min-height: 110px;
   padding: 40px;
   color: #fff;
 }
