feat(init): 代码修改

--- a/src/main/resources/templates/product_background.html
+++ b/src/main/resources/templates/product_background.html
@@ -30,7 +30,7 @@
   </p>
   <div style="text-align: -webkit-center;">
 
-    <img src="img/c.png" class="thumbnail" width="600px"/>
+    <img src="img/架构图.jpg" class="thumbnail" width="600px"/>
   </div>
 
 </div>
